[gd_scene load_steps=5 format=3 uid="uid://c0hh0yrq3thel"]

[ext_resource type="Script" path="res://scripts/window.gd" id="1_4xjnq"]
[ext_resource type="Texture2D" uid="uid://dkms5fqatrkx" path="res://ressources/textures/closed_window.png" id="2_xkeoh"]
[ext_resource type="Texture2D" uid="uid://wnv1ilroar8q" path="res://ressources/textures/lighting_level_1.png" id="3_gmymf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gc5cm"]
size = Vector2(40, 20)

[node name="Window" type="StaticBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_4xjnq")

[node name="WindowSprite" type="Sprite2D" parent="."]
position = Vector2(24, 24)
texture = ExtResource("2_xkeoh")

[node name="LightingSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, 24)
texture = ExtResource("3_gmymf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24, 38)
shape = SubResource("RectangleShape2D_gc5cm")

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
